fix Garden side panel coordinate space and bounds